fix x scrollbar

--- a/SDMetaUI/Pages/Index.razor.css
+++ b/SDMetaUI/Pages/Index.razor.css
@@ -47,3 +47,8 @@
     padding-left: 8px;
     padding-right: 8px;
 }
+
+.row {
+    margin-left: -8px;
+    margin-right: -8px;
+}
